_includes/css/screen.css
* {
  margin: 0;
  padding: 0;
}

html, body {
  height: 100%;
  -webkit-font-smoothing: antialiased;
}

body {
  font-size: 16px;
  background-color: #fff;
  color: #222222;
  line-height: 22px;
  margin: 0;
  border-top: 7px solid {{ site.data.theme.highlight_color }};
}

h1, h2, h3, h4, h5, h6 {
  color: #181818;
  font-family: "Open Sans", sans-serif;
  font-weight: 600;
}

h1.title {
  font-weight: 800;
  letter-spacing: -0.5px;
}

h1 {
  font-size: 32px;
  line-height: 32px;
}

h2 {
  font-size: 24px;
  line-height: 24px;
  font-weight: 700;
}

h3 {
  font-size: 21px;
  line-height: 21px;
  font-weight: 700;
}

p {
  margin-bottom: 15px;
}

strong {
  font-weight: 800;
}

ul {
  margin: 1em 0;
  list-style: disc;
}

li {
  line-height: 22px;
}

a {
  color: {{ site.data.theme.highlight_color }};
  text-decoration: none;
}

a:hover {
  color: {{ site.data.theme.highlight_color }};
  text-decoration: underline;
}

a:visited {
  color: {{ site.data.theme.highlight_color }};
}

table {
  font-size: inherit;
  font: 100%;
}

hr {
  margin-top: 22px;
  margin-bottom: 22px;
}

sup {
  vertical-align: super;
  font-size: 9;
  font-weight: 800;
  line-height: 0px;
}

img {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

ul.posts {
  margin-top: 0;
  list-style-type: none;
  margin-bottom: 10px;
}

ul.posts li {
  line-height: 22px;
  font-size: 16px;
  margin-bottom: 1px;
}

.date {
  font-family: 'Roboto Mono', 'Lucida Console', 'Andale Mono', monospace;
  color: #bbb;
  font-size:13px;
  background-color: #f9f9f9;
  border-radius: 4px; 
  padding-left: 6px;
  padding-right: 6px;
  border: 1px solid #e2e2e2;
}

.meta {
  color: #aaa;
  margin: 0;
}

.site .footer {
  font-size: 80%;
  color: #666;
  border-top: 4px solid #eee;
  overflow: hidden;
}

nav h1, nav h2 {
  //text-align: center;
  font-weight: 800;
  letter-spacing: -0.5px;
}

nav h1 {
  font-size: 34px;
  line-height: 32px;
  margin-bottom: 8px;
}

nav h2 a {
  font-weight: 800;
}

#bio {
  margin-top: 10px;
  margin-bottom: 10px;
  //border: solid #eaeaea;
  //border-width: 1px 0;
}

#bio p {
  margin-top: 10px;
  margin-bottom: 10px;
  font-weight: 600;
}

#navlink a {
  font-weight: 700;
}

#social {
  margin-top: 10px;
  margin-bottom: 10px;
  font-size: 13px;
}

#tags {
  margin-top: 10px;
  margin-bottom: 10px;
  font-size: 13px;
  padding-top: 10px;
  //border-top: solid #eaeaea;
  //border-width: 1px 0;
}

#post {
  margin-top: 10px;
  margin-bottom: 15px;
}

#post h1, h2, h3, p {
  margin-bottom: 15px;
}

#post .highlight {
  background-color: #f2f2f2;
  border-radius: 4px;
}

#post pre {    
  border: 1px solid #ddd;
  padding: 10px;
  margin-bottom: 20px !important;
  line-height: 20px;
  font-size: 14px;
}

#post ul,
#post ol {
  margin-left: 1em;
}

#post code {
  font-family: 'Roboto Mono', 'Lucida Console', 'Andale Mono', monospace;
  line-height: 16px;
  border: 1px solid #ddd;
  background-color: #f2f2f2;
  color: #a1a1a1;
  font-size: 14px;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: 4px;
}

#post pre code {
  border: none;
}

.section-title {
  color: #111;
  font-size: 21px;
  line-height: 24px;
  display: none;
}

.section-title .fa-bookmark {
  padding-right: 5px;
  color: #111;
}

#related {
  margin-bottom: 15px;
}

.sidebar {
  padding-top: 25px;
  font-family: "open sans", sans-serif;
}

.content {
  font: 400 16px/22px "Open Sans", sans-serif;
  //border-left: 1px solid #eee;
  padding-left: 40px;
  padding-top: 25px;
  min-height: 400px;
}

.footer {
  width: 100%;
}

.footer {
  font-size: 80%;
  color: #666;
  //border-top: 4px solid #EEE;
  overflow: hidden;
  margin-top: 10px;
  margin-bottom: 20px;
}

.aside {
  font-size: 75%;
  color: #666;
}

#logo, #gravatar {
  margin-bottom: 25px;
}

#gravatar {
  width: 180px;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  border-radius: 50%;
}

#stalker {
  display: inline-block;
  height: 18px;
  margin-left: 5px;
}

#stalker a {
  //width: 32px;
  overflow: hidden;
  float: left;
}

#stalker i {
  font-size: 28px;
  margin-right: 5px;
}

#stalker a:hover {
  text-decoration: none;
  color: {{ site.data.theme.highlight_color }};
}

i.fa-hn {
  font-family: "open sans", sans-serif;
  text-align: center;
  font-size: 18px !important;
  position: relative;
  color: white;
}

i.fa-home {
  font-size: 24px;
}

.home {
  font-size: 24px;
  float: right;
  color: #AAA;
}

.home:hover {
  text-decoration: none;
}

.disclaimer p {
  margin-top: 5px;
  font-size: 11px;
  text-align: center;
  display: none;
}

.footnotes {
  font-size: 14px;
  color: #777;
  //font-style: italic;
}

.footnotes li {
  margin-left: -15px;
  font-weight: 800; 
  font-size: 13px;
}

.footnotes p {
  font-weight: 600;
  font-size: 14px;
  line-height: 19px;  
}

.reversefootnote {
  font-size: 12px;
}

.icon-overlay {
  font-size: 16px !important;
  position: relative;
  bottom: 27px;
  left: 5px;
  color: white;
}

.caption {
  margin: 0 auto;
  text-align: center;
  font-size: smaller;
  padding-bottom: 10px
}

sup {
  vertical-align: super;
  font-size: 13px;
}

#search-container {
  position: relative;
  color: #aaa;
}

#search-container .fa-search { 
  position: absolute;
  top: 13px;
  left: 12px;
  font-size: 15px;
  color: #aaa;
}

#search-input {
  text-indent: 10px;
  font-size: 15px;
  font-family: "Open Sans";
  font-weight: 700;
  height: 38px;
  line-height: 22px;
  padding: 0px;
  padding-left: 10px;
  margin: auto 0;
  background: #f6f6f6;
  border: 0px;
  color: #aaa;
}

#search-input {
    border: 1px solid #e2e2e2;
    border-radius: 4px;
    padding-left: 26px;
    background: url(//qsf.ec.quoracdn.net/-3-images.new_grid.QuoraSearch.png-26-56e8792e88146693.png) no-repeat 8px center;
    background-size: 13px;
    box-shadow: inset 0 1px 1px rgba(200,200,200,0.3);
    outline: 0;
}

input[type="text"] {
     width: 100%; 
     box-sizing: border-box;
}

input::-webkit-input-placeholder {
color: #aaa !important;
}
 
input:-moz-placeholder { /* Firefox 18- */
color: #aaa !important;  
}
 
input::-moz-placeholder {  /* Firefox 19+ */
color: #aaa !important;  
}
 
input:-ms-input-placeholder {  
color: #aaa !important;  
}

#results {
  display: none;
}

#results-container {
  margin-top: 0;
  list-style-type: none;
  margin-bottom: 10px;
}

.tag {
  border: 1px solid #e2e2e2;
  font-family: 'Roboto Mono', 'Lucida Console', 'Andale Mono', monospace;
  font-weight: 400;
  font-size: 13px;
  background-color: none;
  border-radius: 4px;
  padding: 0 .4em;
  display: inline;
}

.tag a {
  text-decoration: none;
  font-weight: 400;
}

.tag:hover {
  border-color: {{ site.data.theme.highlight_color }};
  text-decoration: none;
}

.post-list {
  padding-bottom: 10px;
}

#post-list-title {
  color: #111;
  font-size: 21px;
  font-weight: 700;
  line-height: 21px;
}

#search-result li {
  margin-bottom: 1px;
}

#search-result .date {
  border: none;
  background-color: white;
  color: #bbb;
  padding-left: 0;
}

#search-result .tag {
  border: none;
  color: #bbb;
}

#search-result #post-list-title {
  color: #555;
}

#no-result {
  color: #555;
  font-size: 21px;
  font-weight: 700;
}

#disqus {
  margin-top: 30px;
  padding-left: 1px;
  padding-right: 1px;
}

